--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,17 @@
+@value base-background: #eaeae8;
+@value alt-background: #dddddd;
+@value main-text: #212b2f;
+@value main-text-secondary: #113333;
+@value accent: #bb5e08;
+
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(10deg, alt-background, base-background);
 }
 
 .main {
@@ -13,20 +20,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  color: main-text;
+  font-family: neue-haas-grotesk-display,sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  max-width: 800px;
+
 }
 
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid main-text;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.footer img {
-  margin-left: 0.5rem;
+.footer svg {
+  padding: 0 0.5rem;
 }
 
 .footer a {
@@ -35,8 +48,11 @@
   align-items: center;
 }
 
+.footer a:hover {
+  color: accent;
+}
+
 .title a {
-  color: #0070f3;
   text-decoration: none;
 }
 
@@ -50,16 +66,40 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  position: relative;
+}
+
+.title:after {
+  content: '';
+  width: 4rem;
+  height: 0.25rem;
+  background: main-text;
+  position: absolute;
+  bottom: -1rem;
+  left: 0;
 }
 
 .title,
 .description {
-  text-align: center;
+  text-align: left;
 }
 
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  font-family: neue-haas-grotesk-display,sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  word-spacing: 0.1rem;
+}
+
+.description > a {
+  border-bottom: 1px solid main-text;
+}
+
+.description > a:hover {
+  color: accent;
+  border-bottom-color: accent;
 }
 
 .code {
@@ -81,43 +121,101 @@
   margin-top: 3rem;
 }
 
+.list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+  max-width: 800px;
+  margin-top: 3rem;
+}
+
 .card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   margin: 1rem;
   flex-basis: 45%;
-  padding: 1.5rem;
+  width: 100%;
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  font-family: neue-haas-grotesk-text, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  fill: text-main;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: accent;
+  fill: accent;
 }
 
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  font-weight: 500;
+  position: relative;
+}
+
+.card .partialDivider {
+  width: 2rem;
+  height: 0.15rem;
+}
+
+.card h3:after {
+  content: '';
+  width: 2rem;
+  height: 0.15rem;
+  background: main-text;
+  position: absolute;
+  bottom: -0.5rem;
+  left: 0.05rem;
+}
+
+.card:hover h3:after {
+  background: accent;
 }
 
 .card p {
   margin: 0;
   font-size: 1.25rem;
-  line-height: 1.5;
+  line-height: 1.5rem;
+  font-weight: 400;
+}
+
+.card .cardIcon {
+  font-size: 2rem;
+  padding: 0 0 0 1rem;
+}
+
+.cardIcon svg { 
+  height: 1rem;
 }
 
 .logo {
-  height: 1em;
+  height: 1.5rem;
 }
 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+
+  .description {
+    font-size: 1.25rem;
+  }
+
+  .card h3 {
+    font-size: 1.25rem;
+  }
+
+  .card p {
+    font-size: 1.1rem;
   }
 }
