--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -208,6 +208,7 @@
   }
 
   .description {
+    padding: 0.8rem 0 0 0;
     font-size: 1.25rem;
   }
 
@@ -217,5 +218,9 @@
 
   .card p {
     font-size: 1.1rem;
+  }
+
+  .list {
+    margin: 1rem 0 0;
   }
 }
