--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,3 @@
-@value base-background: #eaeae8;
-@value alt-background: #dddddd;
-@value main-text: #212b2f;
-@value main-text-secondary: #113333;
-@value accent: #bb5e08;
-
-@value base-background-dark: #212b2f;
-@value alt-background-dark: #121b1f;
-@value main-text-dark: #eaeae8;
-@value main-text-secondary-dark: #dddddd;
-@value accent-dark: #fc8211;
-
 .container {
   min-height: 100vh;
   padding: 0 2rem;
@@ -17,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(10deg, alt-background, base-background);
+  background: linear-gradient(10deg, var(--alt-background), var(--base-background));
 }
 
 .main {
@@ -27,8 +15,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  color: main-text;
-  font-family: neue-haas-grotesk-display,sans-serif;
+  color: var(--main-text);
+  font-family: var(--font-display);
   font-weight: 400;
   font-style: normal;
   max-width: 800px;
@@ -38,11 +26,10 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid main-text;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: main-text;
+  color: var(--main-text);
 }
 
 .footer svg {
@@ -56,7 +43,7 @@
 }
 
 .footer a:hover {
-  color: accent;
+  color: var(--accent);
 }
 
 .title a {
@@ -76,11 +63,12 @@
   position: relative;
 }
 
+/* Horizontal dividing dash */
 .title:after {
   content: '';
   width: 4rem;
   height: 0.25rem;
-  background: main-text;
+  background: var(--main-text);
   position: absolute;
   bottom: -1rem;
   left: 0;
@@ -94,7 +82,7 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
-  font-family: neue-haas-grotesk-display,sans-serif;
+  font-family: var(--font-display);
   font-weight: 400;
   font-style: normal;
   word-spacing: 0.15rem;
@@ -102,31 +90,12 @@
 }
 
 .description > a {
-  border-bottom: 1px solid main-text;
+  border-bottom: 0.1rem solid var(--main-text);
 }
 
 .description > a:hover {
-  color: accent;
-  border-bottom-color: accent;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
+  color: var(--accent);
+  border-bottom-color: var(--accent);
 }
 
 .list {
@@ -150,17 +119,17 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  font-family: neue-haas-grotesk-text, sans-serif;
+  font-family: var(--font-text);
   font-weight: 400;
   font-style: normal;
-  fill: text-main;
+  fill: var(--text-main);
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: accent;
-  fill: accent;
+  color: var(--accent);
+  fill: var(--accent);
 }
 
 .card h3 {
@@ -170,23 +139,18 @@
   position: relative;
 }
 
-.card .partialDivider {
-  width: 2rem;
-  height: 0.15rem;
-}
-
 .card h3:after {
   content: '';
   width: 2rem;
   height: 0.15rem;
-  background: main-text;
+  background: var(--main-text);
   position: absolute;
   bottom: -0.5rem;
   left: 0.05rem;
 }
 
 .card:hover h3:after {
-  background: accent;
+  background: var(--accent);
 }
 
 .card p {
@@ -211,64 +175,57 @@
 
 @media (prefers-color-scheme: dark) {
   .container {
-    background: linear-gradient(10deg, alt-background-dark, base-background-dark);
+    background: linear-gradient(10deg, var(--alt-background-dark), var(--base-background-dark));
   }
 
   .main {
-    color: main-text-dark;
+    color: var(--main-text-dark);
   }
 
   .description > a {
-    border-bottom: 1px solid main-text-dark;
+    border-bottom-color: var(--main-text-dark);
   }
   
   .description > a:hover {
-    color: accent-dark;
-    border-bottom-color: accent-dark;
+    color: var(--accent-dark);
+    border-bottom-color: var(--accent-dark);
   }
 
   .title:after {
-    background: main-text-dark ;
+    background: var(--main-text-dark);
   }
 
   .footer {
-    color: main-text-dark;
-    border-top: 1px solid main-text-dark;
+    color: var(--main-text-dark);
   }
 
   .footer a:hover {
-    color: accent-dark;
+    color: var(--accent-dark);
   }
 
   .card:hover,
   .card:focus,
   .card:active {
-    color: accent-dark;
-    fill: accent-dark;
+    color: var(--accent-dark);
+    fill: var(--accent-dark);
   }
 
+  /* Horizontal dividing dash */
   .card h3:after {
-    background: main-text-dark;
+    background: var(--main-text-dark);
   }
 
   .card:hover h3:after {
-    background: accent-dark;
+    background: var(--accent-dark);
   }
 }
 
 @media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-
-
   .description {
     padding: 0.8rem 0 0 0;
     font-size: 1.25rem;
     margin: 1rem 0 0;
   }
-
 
   .card h3 {
     font-size: 1.25rem;
